--- a/pages/index.html
+++ b/pages/index.html
@@ -61,7 +61,7 @@
             // Simular um atraso antes de redirecionar (para simular carregamento)
             setTimeout(function() {
                 // Redirecionar para a página de dashboard
-                window.location.href = "dashboard.html";
+                window.location.href = "../pages/dashboard.html";
             }, 2000); // Tempo de simulação: 2 segundos
             return false;
         }
