--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -143,7 +143,7 @@
     <script>
         function logoutUser() {
             // Redirecionando para a página inicial (index)
-            window.location.href = "index.html";
+            window.location.href = "../pages/index.html";
         }
     </script>
 </body>
